; ModuleID = '/home/carl/AnghaBench/openssl/apps/extr_dgst.c_show_digests.c'
source_filename = "/home/carl/AnghaBench/openssl/apps/extr_dgst.c_show_digests.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64* }
%struct.doall_dgst_digests = type { i32, i32 }

@.str = private unnamed_addr constant [4 x i8] c"rsa\00", align 1
@.str.1 = private unnamed_addr constant [4 x i8] c"RSA\00", align 1
@.str.2 = private unnamed_addr constant [7 x i8] c"-%-25s\00", align 1
@.str.3 = private unnamed_addr constant [2 x i8] c"\0A\00", align 1
@.str.4 = private unnamed_addr constant [2 x i8] c" \00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_3__*, i8*)* @show_digests to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @show_digests(%struct.TYPE_3__* %0, i8* %1) #0 {
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.doall_dgst_digests*, align 8
  %6 = alloca i32*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = bitcast i8* %7 to %struct.doall_dgst_digests*
  store %struct.doall_dgst_digests* %8, %struct.doall_dgst_digests** %5, align 8
  store i32* null, i32** %6, align 8
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  %11 = load i64*, i64** %10, align 8
  %12 = call i32* @strstr(i64* %11, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0))
  %13 = icmp ne i32* %12, null
  br i1 %13, label %20, label %14

14:                                               ; preds = %2
  %15 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 0
  %17 = load i64*, i64** %16, align 8
  %18 = call i32* @strstr(i64* %17, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0))
  %19 = icmp ne i32* %18, null
  br i1 %19, label %20, label %21

20:                                               ; preds = %14, %2
  br label %63

21:                                               ; preds = %14
  %22 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %23 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %22, i32 0, i32 0
  %24 = load i64*, i64** %23, align 8
  %25 = load i64, i64* %24, align 8
  %26 = trunc i64 %25 to i8
  %27 = call i32 @islower(i8 zeroext %26)
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %30, label %29

29:                                               ; preds = %21
  br label %63

30:                                               ; preds = %21
  %31 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %32 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %31, i32 0, i32 0
  %33 = load i64*, i64** %32, align 8
  %34 = call i32* @EVP_get_digestbyname(i64* %33)
  store i32* %34, i32** %6, align 8
  %35 = load i32*, i32** %6, align 8
  %36 = icmp eq i32* %35, null
  br i1 %36, label %37, label %38

37:                                               ; preds = %30
  br label %63

38:                                               ; preds = %30
  %39 = load %struct.doall_dgst_digests*, %struct.doall_dgst_digests** %5, align 8
  %40 = getelementptr inbounds %struct.doall_dgst_digests, %struct.doall_dgst_digests* %39, i32 0, i32 1
  %41 = load i32, i32* %40, align 4
  %42 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %43 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %42, i32 0, i32 0
  %44 = load i64*, i64** %43, align 8
  %45 = call i32 (i32, i8*, ...) @BIO_printf(i32 %41, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.2, i64 0, i64 0), i64* %44)
  %46 = load %struct.doall_dgst_digests*, %struct.doall_dgst_digests** %5, align 8
  %47 = getelementptr inbounds %struct.doall_dgst_digests, %struct.doall_dgst_digests* %46, i32 0, i32 0
  %48 = load i32, i32* %47, align 4
  %49 = add nsw i32 %48, 1
  store i32 %49, i32* %47, align 4
  %50 = icmp eq i32 %49, 3
  br i1 %50, label %51, label %58

51:                                               ; preds = %38
  %52 = load %struct.doall_dgst_digests*, %struct.doall_dgst_digests** %5, align 8
  %53 = getelementptr inbounds %struct.doall_dgst_digests, %struct.doall_dgst_digests* %52, i32 0, i32 1
  %54 = load i32, i32* %53, align 4
  %55 = call i32 (i32, i8*, ...) @BIO_printf(i32 %54, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.3, i64 0, i64 0))
  %56 = load %struct.doall_dgst_digests*, %struct.doall_dgst_digests** %5, align 8
  %57 = getelementptr inbounds %struct.doall_dgst_digests, %struct.doall_dgst_digests* %56, i32 0, i32 0
  store i32 0, i32* %57, align 4
  br label %63

58:                                               ; preds = %38
  %59 = load %struct.doall_dgst_digests*, %struct.doall_dgst_digests** %5, align 8
  %60 = getelementptr inbounds %struct.doall_dgst_digests, %struct.doall_dgst_digests* %59, i32 0, i32 1
  %61 = load i32, i32* %60, align 4
  %62 = call i32 (i32, i8*, ...) @BIO_printf(i32 %61, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.4, i64 0, i64 0))
  br label %63

63:                                               ; preds = %20, %29, %37, %58, %51
  ret void
}

declare dso_local i32* @strstr(i64*, i8*) #1

declare dso_local i32 @islower(i8 zeroext) #1

declare dso_local i32* @EVP_get_digestbyname(i64*) #1

declare dso_local i32 @BIO_printf(i32, i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
